--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
-      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+      <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="js/script.js"></script>
   </body>
