author section added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
   </head>
   
   <body class="container">
+<!-- HEADER -->
     <h1 class="jumbotron bg-info text-center">API.news</h1>
-      
+
+<!-- AUTHOR SECTION-->
+    <div>
+      <div class="author"><a href="#" data-toggle="modal" data-target=".bd-example-modal-xl">About the author</a>
+        <!-- CREATOR SECTION -->
+        <!-- <button type="button" class="btn btn-primary" >Extra large modal</button> -->
+
+        <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+              <h2>About the creator</h2><br>
+              <img class="img" src="img/vale.jpg">
+              <h3>hola</h3>
+              <p>Lorem lorem lorem</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
 
 <!-- MENU CHOICES -->
     <nav class="navbar navbar-light bg-primary sticky-top">
